# merlot

./: .gitignore  Makefile  README.md  dune-project  merlot.opam
docs/: TODO-stdlib.md
docs/design/: behaviors.md  macro-system.md  module-system.md  mutable-references.md
example/1-hello/: Makefile  README.md  hello.ml
example/10-elixir-struct/: Makefile  README.md  consumer.ml  demo.exs  person.ml
example/11-expose/: Makefile  README.md  expose.ml
example/2-processes/: Makefile  README.md  counter.ml
example/3-io/: Makefile  README.md  greeting.ml
example/4-lists/: Makefile  README.md  data_pipeline.ml
example/5-elixir/: Makefile  README.md  word_stats.ml
example/6-actor/: Makefile  README.md  counter.ml
example/7-supervisor/: Makefile  README.md  workers.ml
example/8-chat/: Makefile  README.md  chat_server.ml  message.ml  room.ml  user.ml
example/9-macro/: Makefile  README.md  debug.ml
lib/: beam_ir.ml  compile.ml  core_erlang.ml  doc_extract.ml  dune  index.mld  macro_expand.ml  merlot.ml  typed_to_beam.ml
priv/: merlot_actor.erl  merlot_supervisor.erl
stdlib/: Makefile  actor.ml  dune  enum.ml  erlang.ml  inspect.ml  io.ml  keyword.ml  list.ml  lists.ml  macro.ml  map.ml  merlot_stdlib.ml  option.ml  process.ml  result.ml  string.ml  supervisor.ml  timer.ml
test/: dune  pipe_elixir_test.ml  test_macro_expand.ml  test_merlot.ml
test/cases/: arithmetic.ml  conditionals.ml  elixir_import.ml  elixir_struct.ml  exceptions.ml  externals.ml  hello.ml  higher_order.ml  lists.ml  macro_define.ml  macro_inject.ml  macro_quote.ml  math_lib.ml  option.ml  optional_args.ml  processes.ml  records.ml  selective_receive.ml  stdlib_features.ml  test_printf.ml  tuples.ml  variants.ml
test/expected/: arithmetic.core  conditionals.core  elixir_import.core  elixir_struct.core  exceptions.core  externals.core  hello.core  higher_order.core  lists.core  macro_define.core  macro_inject.core  macro_quote.core  math_lib.core  option.core  optional_args.core  processes.core  records.core  selective_receive.core  stdlib_features.core  test_printf.core  tuples.core  variants.core
